fixed issue on x overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -22,7 +22,8 @@ a {
 
 section {
   height: 100vh;
-  width: 100vw;
+  //   width: 100vw;
+  width: auto;
   scroll-snap-align: center;
   overflow: hidden;
 }
